# Qaongdur

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  Makefile  README.md  compose.yml  package.json  pnpm-lock.yaml
apps/web/: .env.example  Dockerfile  README.md  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/app/: operator-context.ts  operator-layout.tsx  use-operator-outlet.ts
apps/web/src/auth/: auth-context-store.ts  auth-context.tsx  auth-screen.tsx  keycloak.ts  role-gate.tsx  use-auth.ts
apps/web/src/components/: agent-chat-rail.tsx  device-map.tsx
apps/web/src/lib/: api.ts  bkk-time.ts  control-api.ts
apps/web/src/pages/: alerts-events-page.tsx  crop-gallery-page.tsx  devices-page.tsx  incident-detail-page.tsx  live-monitoring-page.tsx  overview-page.tsx  playback-search-page.tsx  settings-page.tsx
docs/: api-reference.md  architecture.md  authentication.md  model-assets.md  task-03-mock-video-vision-plan.md  todo-next.md  ux-ui-improvement-branch-plan.md
docs/codex-prompts/: 00-repo-structure.md  01-frontend-web-console.md  02-auth-keycloak-passkeys.md  03-backend-vms-ai-platform.md  04-agent-chat-openclaw.md  05-docker-open-source-platform.md  06-vision-investigation-identity-search-roi.md  06b-storage-budget-runtime-hardening.md
docs/distributed-v/: 01-target-architecture.md  02-repo-and-service-refactor.md  03-data-model.md  04-queue-and-api-contracts.md  05-docker-and-machine-onboarding.md  06-rollout-plan.md  README.md
infra/docker/: .env.example  README.md  compose.auth.yml  compose.core.yml  compose.distributed-central.yml  compose.worker.yml  worker.env.example
infra/keycloak/: README.md
infra/keycloak/import/: qaongdur-dev-realm.json
infra/mediamtx/: README.md  mediamtx.yml
services/agent/: README.md
services/control-api/: .env.example  Dockerfile  README.md  pyproject.toml
services/control-api/src/control_api/: audit.py  auth.py  camera_store.py  config.py  main.py  mediamtx.py  vision.py
services/control-api/tests/: test_auth.py  test_camera_store.py  test_config.py  test_mediamtx.py  test_mock_video_inventory.py
services/face-api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/face-api/src/face_api/: __init__.py  config.py  main.py  runtime.py
services/mock-streamer/: Dockerfile  entrypoint.sh
services/recording-pruner/: Dockerfile  entrypoint.sh
services/vision/: .env.example  Dockerfile  README.md  pyproject.toml
services/vision/src/vision_service/: artifact_store.py  config.py  control_api.py  database.py  demo_data.py  detection.py  distributed_models.py  distributed_service.py  domain.py  embedding.py  face.py  main.py  main_api.py  main_worker.py  mock_sources.py  object_store.py  pipeline.py  segment_processor.py  tracking.py  vector_store.py
services/vision/tests/: test_crop_search.py  test_demo_data.py  test_distributed_runtime.py  test_embedding.py  test_mock_sources.py  test_repository.py  test_vector_store.py
