[project]
name = "qaongdur-face-api"
version = "0.1.0"
description = "Qaongdur face embedding sidecar backed by InspireFace."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=2.1.0",
  "opencv-python-headless>=4.10.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
qaongdur-face-api = "face_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_api"]
